<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_img"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hyerimhyeon.o2_android.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/register_top"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">



                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@color/childColor"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="40dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="꿈나무 회원가입"
                        android:paddingTop="3dp"
                        android:paddingBottom="3dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="꿈나무란 초.중.고등학교 내에 특정한 스포츠 종목에서 지속적인 운동과 스포츠 활동을 하고 있는 학생을 말합니다."
                    android:textColor="@color/white_99"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textSize="12dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_gravity="center">


                <ImageView
                    android:id="@+id/child_profile_img"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:background="@drawable/profile_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="이메일"
                        android:textSize="12dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:layout_marginTop="30dp"/>

                    <EditText
                        android:id="@+id/c_register_mail"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="15dp"
                        android:hint="@string/id_hint"
                        android:inputType="textEmailAddress"
                        android:background="@android:color/transparent"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:background="@color/black"></LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="비밀번호"
                        android:textSize="12dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:layout_marginTop="30dp"/>

                    <EditText
                        android:id="@+id/c_register_pw"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="15dp"
                        android:hint="@string/pw_hint"
                        android:inputType="textPassword"
                        android:background="@android:color/transparent"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:background="@color/black"></LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="비밀번호 확인"
                        android:textSize="12dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:layout_marginTop="30dp"/>

                    <EditText
                        android:id="@+id/c_register_pw2"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="15dp"
                        android:hint="@string/pw_hint"
                        android:inputType="textPassword"
                        android:background="@android:color/transparent"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:background="@color/black"></LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="이름"
                        android:textSize="12dp"
                        android:inputType="phone"
                        android:textColor="@color/black"
                        android:layout_marginTop="30dp"/>

                    <EditText
                        android:id="@+id/c_register_name"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="15dp"
                        android:hint="홍길동"
                        android:inputType="text"
                        android:background="@android:color/transparent"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:background="@color/black"></LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="휴대폰 번호"
                        android:textSize="12dp"
                        android:inputType="phone"
                        android:textColor="@color/black"
                        android:layout_marginTop="30dp"/>

                    <EditText
                        android:id="@+id/c_register_phone"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="15dp"
                        android:hint="@string/phone_hint"
                        android:inputType="phone"
                        android:background="@android:color/transparent"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:background="@color/black"></LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="생년월일"
                        android:textSize="12dp"
                        android:inputType="date"
                        android:textColor="@color/black"
                        android:layout_marginTop="30dp"/>

                    <EditText
                        android:id="@+id/c_register_birth"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="15dp"
                        android:hint="@string/birthday_hint"
                        android:inputType="date"
                        android:background="@android:color/transparent"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:background="@color/black"></LinearLayout>

                </LinearLayout>



                <Spinner
                    android:id="@+id/c_register_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"></Spinner>

                <Spinner
                    android:id="@+id/c_register_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"></Spinner>


                <Spinner
                    android:id="@+id/c_register_school"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"></Spinner>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="학교이름"
                        android:textSize="12dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:layout_marginTop="30dp"/>

                    <EditText
                        android:id="@+id/c_register_belong"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="15dp"
                        android:hint="@string/school_hint"
                        android:inputType="text"
                        android:background="@android:color/transparent"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:background="@color/black"></LinearLayout>

                </LinearLayout>


                <Button
                    android:id="@+id/c_register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/black"
                    android:text="회원가입"
                    android:textColor="@color/white"
                    android:padding="10dp"
                    android:textSize="13dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

